@@ -1,27 +1,3 @@
-/*
- * The MIT License (MIT)
- *
- *  Copyright © 2023, Alps BTE <bte.atchli@gmail.com>
- *
- *  Permission is hereby granted, free of charge, to any person obtaining a copy
- *  of this software and associated documentation files (the "Software"), to deal
- *  in the Software without restriction, including without limitation the rights
- *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- *  copies of the Software, and to permit persons to whom the Software is
- *  furnished to do so, subject to the following conditions:
- *
- *  The above copyright notice and this permission notice shall be included in all
- *  copies or substantial portions of the Software.
- *
- *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- *  SOFTWARE.
- */
-
 package com.alpsbte.plotsystem.core.system.tutorial;
 
 import com.alpsbte.alpslib.utils.AlpsUtils;
@@ -40,44 +16,62 @@ import com.alpsbte.plotsystem.core.system.tutorial.stage.tasks.events.commands.W
 import com.alpsbte.plotsystem.core.system.tutorial.stage.tasks.message.ChatMessageTask;
 import com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils;
 import com.alpsbte.plotsystem.utils.Utils;
-import com.alpsbte.plotsystem.utils.io.*;
+import com.alpsbte.plotsystem.utils.io.ConfigPaths;
+import com.alpsbte.plotsystem.utils.io.ConfigUtil;
+import com.alpsbte.plotsystem.utils.io.LangPaths;
+import com.alpsbte.plotsystem.utils.io.LangUtil;
+import com.alpsbte.plotsystem.utils.io.TutorialPaths;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.event.ClickEvent;
 import net.kyori.adventure.text.event.HoverEvent;
-import org.bukkit.*;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.Material;
+import org.bukkit.World;
 import org.bukkit.block.data.BlockData;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
 import org.bukkit.util.Vector;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.IOException;
-import java.sql.SQLException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
-import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.*;
-import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.Sound;
-import static net.kyori.adventure.text.Component.text;
 import static com.alpsbte.alpslib.utils.AlpsUtils.deserialize;
-import static net.kyori.adventure.text.format.NamedTextColor.*;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.Delay;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.Sound;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.TEXT_CLICK_HIGHLIGHT;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.TEXT_HIGHLIGHT_END;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.TEXT_HIGHLIGHT_START;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.getDocumentationLinks;
+import static com.alpsbte.plotsystem.core.system.tutorial.utils.TutorialUtils.setBlockAt;
+import static net.kyori.adventure.text.Component.text;
+import static net.kyori.adventure.text.format.NamedTextColor.DARK_GRAY;
+import static net.kyori.adventure.text.format.NamedTextColor.GRAY;
+import static net.kyori.adventure.text.format.NamedTextColor.GREEN;
 import static net.kyori.adventure.text.format.TextDecoration.BOLD;
 
 public class BeginnerTutorial extends AbstractPlotTutorial {
-    public BeginnerTutorial(Player player, int stageId) throws SQLException {
+    public BeginnerTutorial(Player player, int stageId) {
         super(player, TutorialCategory.BEGINNER.getId(), stageId);
     }
 
     @Override
     protected List<TutorialWorld> initWorlds() {
-        try {
-            return Arrays.asList(
-                    new TutorialWorld(getId(), 0, Utils.getSpawnLocation().getWorld().getName()),
-                    new TutorialWorld(getId(), 1, plot.getWorld().getWorldName()),
-                    new TutorialWorld(getId(), 2, Utils.getSpawnLocation().getWorld().getName())
-            );
-        } catch (SQLException ex) {
-            onException(ex);
-        }
-        return null;
+        return Arrays.asList(
+                new TutorialWorld(getId(), 0, Utils.getSpawnLocation().getWorld().getName()),
+                new TutorialWorld(getId(), 1, tutorialPlot.getWorld().getWorldName()),
+                new TutorialWorld(getId(), 2, Utils.getSpawnLocation().getWorld().getName())
+        );
     }
 
     @Override
@@ -112,7 +106,7 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
         Bukkit.getScheduler().runTaskLaterAsynchronously(PlotSystem.getPlugin(), () -> {
             sendTutorialCompletedTipMessage(getPlayer());
             getPlayer().playSound(getPlayer().getLocation(), Utils.SoundUtils.NOTIFICATION_SOUND, 1f, 1f);
-        }, 20 * 7);
+        }, 20 * 7L);
     }
 
     private static class Stage1 extends AbstractPlotStage {
@@ -139,8 +133,9 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                             TEXT_HIGHLIGHT_END);
         }
 
+        @Contract(pure = true)
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @Nullable List<AbstractTutorialHologram> setHolograms() {
             return null;
         }
 
@@ -148,7 +143,7 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
         public StageTimeline getTimeline() {
             return new StageTimeline(getPlayer())
                     .delay(Delay.TIMELINE_START)
-                    .interactNPC(deserialize(getTasks().get(0)))
+                    .interactNPC(deserialize(getTasks().getFirst()))
                     .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
                     .sendChatMessage(deserialize(getMessages().get(1)), Sound.NPC_TALK, true)
                     .sendChatMessage(deserialize(getMessages().get(2)), Sound.NPC_TALK, true)
@@ -188,8 +183,9 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
             return LangUtil.getInstance().getList(getPlayer(), LangPaths.Tutorials.Beginner.STAGE2_TASKS);
         }
 
+        @Contract(pure = true)
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @Nullable List<AbstractTutorialHologram> setHolograms() {
             return null;
         }
 
@@ -241,15 +237,16 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     TEXT_HIGHLIGHT_START + "/tpll" + TEXT_HIGHLIGHT_END);
         }
 
+        @Contract(" -> new")
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @NotNull @Unmodifiable List<AbstractTutorialHologram> setHolograms() {
             return Collections.singletonList(
                     new PlotTutorialHologram(getPlayer(), getId(), 0, getMessages().get(4), 3)
             );
         }
 
         @Override
-        public StageTimeline getTimeline() throws SQLException, IOException {
+        public StageTimeline getTimeline() throws IOException {
             return new StageTimeline(getPlayer())
                     .delay(Delay.TIMELINE_START)
                     .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
@@ -260,8 +257,8 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                                     text(Stage2.GOOGLE_MAPS, GRAY), ClickEvent.openUrl(getPlot().getGoogleMapsLink()))
                     }, Sound.NPC_TALK, false)
                     .delay(Delay.TASK_START)
-                    .createHolograms(getHolograms().get(0))
-                    .addTeleportEvent(deserialize(getTasks().get(0)), getPlotPoints(getPlot()), 1, (teleportPoint, isCorrect) -> {
+                    .createHolograms(getHolograms().getFirst())
+                    .addTeleportEvent(deserialize(getTasks().getFirst()), getPlotPoints(getPlot()), 1, (teleportPoint, isCorrect) -> {
                         if (isCorrect) {
                             setBlockAt(getPlayer().getWorld(), teleportPoint, Material.LIME_CONCRETE_POWDER);
                             getPlayer().playSound(new Location(getPlayer().getWorld(), teleportPoint.getBlockX(), teleportPoint.getBlockY(), teleportPoint.getBlockZ()),
@@ -299,8 +296,9 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     TEXT_HIGHLIGHT_START + "//wand" + TEXT_HIGHLIGHT_END);
         }
 
+        @Contract(pure = true)
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @Nullable List<AbstractTutorialHologram> setHolograms() {
             return null;
         }
 
@@ -311,15 +309,14 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
                     .sendChatMessage(deserialize(getMessages().get(1)), Sound.NPC_TALK, false)
                     .delay(Delay.TASK_START)
-                    .addTask(new WandCmdEventTask(getPlayer(), deserialize(getTasks().get(0))))
+                    .addTask(new WandCmdEventTask(getPlayer(), deserialize(getTasks().getFirst())))
                     .delay(Delay.TASK_END)
                     .sendChatMessage(deserialize(getMessages().get(2)), Sound.NPC_TALK, true);
         }
     }
 
     private static class Stage5 extends AbstractPlotStage {
-        private final static String BASE_BLOCK = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getString(TutorialPaths.Beginner.BASE_BLOCK);
-        private final static int BASE_BLOCK_ID = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getInt(TutorialPaths.Beginner.BASE_BLOCK_ID);
+        private static final List<String> BASE_BLOCKS = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getStringList(TutorialPaths.Beginner.BASE_BLOCKS);
 
         protected Stage5(Player player, TutorialPlot plot) {
             super(player, 1, plot, 1);
@@ -341,16 +338,17 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
         @Override
         protected List<String> setTasks() {
             return LangUtil.getInstance().getList(getPlayer(), LangPaths.Tutorials.Beginner.STAGE5_TASKS,
-                    TEXT_HIGHLIGHT_START + "//line " + BASE_BLOCK.toLowerCase() + TEXT_HIGHLIGHT_END);
+                    TEXT_HIGHLIGHT_START + "//line " + BASE_BLOCKS.getFirst() + TEXT_HIGHLIGHT_END);
         }
 
+        @Contract(pure = true)
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @Nullable List<AbstractTutorialHologram> setHolograms() {
             return null;
         }
 
         @Override
-        public StageTimeline getTimeline() throws SQLException {
+        public StageTimeline getTimeline() {
             List<Vector> buildingPoints = getPlotPoints(getPlot());
 
             // Map building points to lines
@@ -370,7 +368,7 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     }, Sound.NPC_TALK, false)
                     .delay(Delay.TASK_START)
                     .addTask(new PlotPermissionChangeTask(getPlayer(), false, true))
-                    .addTask(new LineCmdEventTask(getPlayer(), deserialize(getTasks().get(0)), BASE_BLOCK, BASE_BLOCK_ID, buildingLinePoints, ((minPoint, maxPoint) -> {
+                    .addTask(new LineCmdEventTask(getPlayer(), deserialize(getTasks().getFirst()), BASE_BLOCKS, buildingLinePoints, ((minPoint, maxPoint) -> {
                         if (minPoint != null && maxPoint != null) {
                             buildingLinePoints.remove(minPoint);
 
@@ -387,8 +385,8 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
     }
 
     private static class Stage6 extends AbstractPlotStage {
-        private final static int HEIGHT = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getInt(TutorialPaths.Beginner.HEIGHT);
-        private final static int HEIGHT_OFFSET = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getInt(TutorialPaths.Beginner.HEIGHT_OFFSET);
+        private static final int HEIGHT = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getInt(TutorialPaths.Beginner.HEIGHT);
+        private static final int HEIGHT_OFFSET = ConfigUtil.getTutorialInstance().getBeginnerTutorial().getInt(TutorialPaths.Beginner.HEIGHT_OFFSET);
 
         protected Stage6(Player player, TutorialPlot plot) {
             super(player, 1, plot, 2);
@@ -411,13 +409,14 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
             return LangUtil.getInstance().getList(getPlayer(), LangPaths.Tutorials.Beginner.STAGE6_TASKS);
         }
 
+        @Contract(" -> new")
         @Override
-        protected List<AbstractTutorialHologram> setHolograms() {
+        protected @NotNull @Unmodifiable List<AbstractTutorialHologram> setHolograms() {
             return Collections.singletonList(new PlotTutorialHologram(getPlayer(), getId(), 13, getMessages().get(7), 4));
         }
 
         @Override
-        public StageTimeline getTimeline() throws IOException {
+        public @NotNull StageTimeline getTimeline() throws IOException {
             StageTimeline stage = new StageTimeline(getPlayer())
                     .delay(Delay.TIMELINE_START)
                     .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
@@ -429,8 +428,8 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                                     text(Stage2.GOOGLE_EARTH, GRAY), ClickEvent.openUrl(getPlot().getGoogleEarthLink()))
                     }, Sound.NPC_TALK, false)
                     .delay(Delay.TASK_START)
-                    .createHolograms(getHolograms().get(0));
-            stage.addPlayerChatEvent(deserialize(getTasks().get(0)), HEIGHT, HEIGHT_OFFSET, 3, (isCorrect, attemptsLeft) -> {
+                    .createHolograms(getHolograms().getFirst());
+            stage.addPlayerChatEvent(deserialize(getTasks().getFirst()), HEIGHT, HEIGHT_OFFSET, 3, (isCorrect, attemptsLeft) -> {
                 if (!isCorrect && attemptsLeft > 0) {
                     ChatMessageTask.sendTaskMessage(getPlayer(), new Object[]{deserialize(getMessages().get(6))}, false);
                     getPlayer().playSound(getPlayer().getLocation(), Sound.ASSIGNMENT_WRONG, 1f, 1f);
@@ -485,13 +484,13 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     .delay(Delay.TIMELINE_START)
                     .addTask(new PlotSchematicPasteTask(getPlayer(), 3)).delay(1)
                     .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
-                    .createHolograms(deserialize(getTasks().get(0)), getHolograms().get(0), getHolograms().get(1))
+                    .createHolograms(deserialize(getTasks().getFirst()), getHolograms().get(0), getHolograms().get(1))
                     .delay(Delay.TASK_END)
                     .deleteHolograms()
                     .delay(2)
                     .addTask(new PlotSchematicPasteTask(getPlayer(), 4)).delay(1)
                     .sendChatMessage(deserialize(getMessages().get(3)), Sound.NPC_TALK, true)
-                    .createHolograms(deserialize(getTasks().get(0)), getHolograms().get(2), getHolograms().get(3), getHolograms().get(4))
+                    .createHolograms(deserialize(getTasks().getFirst()), getHolograms().get(2), getHolograms().get(3), getHolograms().get(4))
                     .delay(Delay.TASK_END);
         }
     }
@@ -533,7 +532,7 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
                     .sendChatMessage(deserialize(getMessages().get(1)), Sound.NPC_TALK, true)
                     .createHolograms(getHolograms().get(0), getHolograms().get(1))
                     .addTask(new PlotPermissionChangeTask(getPlayer(), true, false))
-                    .addTask(new BuildEventTask(getPlayer(), deserialize(getTasks().get(0)), getWindowBuildPoints(), (blockPos, isCorrect) -> {
+                    .addTask(new BuildEventTask(getPlayer(), deserialize(getTasks().getFirst()), getWindowBuildPoints(), (blockPos, isCorrect) -> {
                         if (isCorrect) {
                             getPlayer().playSound(getPlayer().getLocation(), Sound.ASSIGNMENT_COMPLETED, 1f, 1f);
                         } else {
@@ -582,8 +581,8 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
             return new StageTimeline(getPlayer())
                     .delay(Delay.TIMELINE_START)
                     .addTask(new PlotSchematicPasteTask(getPlayer(), 6)).delay(1)
-                    .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
-                    .createHolograms(deserialize(getTasks().get(0)), getHolograms().get(0), getHolograms().get(1), getHolograms().get(2))
+                    .sendChatMessage(deserialize(getMessages().getFirst()), Sound.NPC_TALK, true)
+                    .createHolograms(deserialize(getTasks().getFirst()), getHolograms().get(0), getHolograms().get(1), getHolograms().get(2))
                     .delay(Delay.TASK_END);
         }
     }
@@ -623,8 +622,8 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
             return new StageTimeline(getPlayer())
                     .delay(Delay.TIMELINE_START)
                     .addTask(new PlotSchematicPasteTask(getPlayer(), 7)).delay(1)
-                    .sendChatMessage(deserialize(getMessages().get(0)), Sound.NPC_TALK, true)
-                    .createHolograms(deserialize(getTasks().get(0)), getHolograms().get(0), getHolograms().get(1))
+                    .sendChatMessage(deserialize(getMessages().getFirst()), Sound.NPC_TALK, true)
+                    .createHolograms(deserialize(getTasks().getFirst()), getHolograms().get(0), getHolograms().get(1))
                     .delay(Delay.TASK_END)
                     .deleteHolograms()
                     .delay(2)
@@ -647,7 +646,7 @@ public class BeginnerTutorial extends AbstractPlotTutorial {
      *
      * @return list of building points as Vector
      */
-    private static List<Vector> getPlotPoints(TutorialPlot plot) throws SQLException {
+    private static List<Vector> getPlotPoints(TutorialPlot plot) {
         // Read coordinates from config
         FileConfiguration config = ConfigUtil.getTutorialInstance().getBeginnerTutorial();
         List<String> plotPointsAsString = Arrays.asList(
